--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,29 @@
     transform: rotate(360deg);
   }
 }
+*{
+  text-align: center;
+}
+img{
+  display: block;
+  margin: auto;
+}
+.footer{
+  background-color: #6a758a;
+  color:white;
+  width:100%;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;  
+}
+body{
+  position: relative;
+  min-height: 100vh;
+}
+.row{
+  padding-bottom: 5rem;
+}
+.form-floating{
+  margin-bottom: 3rem;
+}
